--- a/package.json
+++ b/package.json
@@ -20,6 +20,16 @@
     "@angular/platform-browser": "^15.2.0",
     "@angular/platform-browser-dynamic": "^15.2.0",
     "@angular/router": "^15.2.0",
+    "@fortawesome/fontawesome-free": "^6.5.2",
+    "@kolkov/ngx-gallery": "^2.0.1",
+    "@microsoft/signalr": "^8.0.0",
+    "bootstrap": "^5.3.3",
+    "bootswatch": "^5.3.3",
+    "ng2-file-upload": "^4.0.0",
+    "ngx-bootstrap": "^10.3.0",
+    "ngx-spinner": "^15.0.1",
+    "ngx-timeago": "2.0",
+    "ngx-toastr": "^16.2.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
